# 23409m

./: .gitignore  CMakeLists.txt
include/: bitboard.h  move.h  utils.h
src/: bitboard.cpp  main.cpp  move.cpp
tests/: CMakeLists.txt  bitboard.cpp  test_bitboard.cpp  test_move.cpp
